Bug 275259 - Braces are getting displayed instead of fullstop in roman bulleting.
Summary: Braces are getting displayed instead of fullstop in roman bulleting.
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/pptx (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-09 08:24 UTC by keerthi
Modified: 2011-11-11 08:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Testdata (34.59 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2011-06-09 08:24 UTC, keerthi
Details
screenshot in calligrastage. (144.23 KB, image/x-png)
2011-06-09 08:25 UTC, keerthi
Details
screenshot in MSoffice 2007 (88.42 KB, application/x-zip-compressed)
2011-06-09 08:37 UTC, keerthi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description keerthi 2011-06-09 08:24:06 UTC
Created attachment 60808 [details]
Testdata

Version: git checkout 8288143b7c1f9f9005209b55b651875219b0e9d6
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10

Test data is in pptx format.
Open the same document in Calligra stage and check for the display of bullet.

Expected outcome:
Roman bullets should be displayed properly.

Actual outcome:
Able to see brace after bullet instead of fullstop.

Please check the screenshots attached.

Frequency:
Always.
Comment 1 keerthi 2011-06-09 08:25:52 UTC
Created attachment 60809 [details]
screenshot in calligrastage.
Comment 2 keerthi 2011-06-09 08:37:46 UTC
Created attachment 60810 [details]
screenshot in MSoffice 2007
Comment 3 Matus Uzak 2011-09-14 15:00:38 UTC
Git commit 665f050e39e819680b477946f21aed5e6fecd359 by Matus Uzak.
Committed on 14/09/2011 at 16:58.
Pushed by uzak into branch 'master'.

libmsooxml: Added missing numbering types.

* Re-ordered according to the spec. to improve the readability.
* Added also support for prefixes.

BUG:275259

M  +47   -16   filters/libmsooxml/MsooXmlCommonReaderDrawingMLImpl.h
M  +5    -0    filters/libmsooxml/MsooXmlUtils.cpp
M  +3    -0    filters/libmsooxml/MsooXmlUtils.h

http://commits.kde.org/calligra/665f050e39e819680b477946f21aed5e6fecd359
Comment 4 swathi 2011-11-11 08:24:41 UTC
Verified in aac9b32c182585abca4455b7c67016d61340a555.