libmsooxml: Added missing numbering types.

* Re-ordered according to the spec. to improve the readability.
* Added also support for prefixes.

BUG:275259